--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -7,6 +7,7 @@ body {
   display: grid;
   grid-template-columns: 35vw 65vw;
   font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+  color: #4d4d4d;
 
   @media(max-width: $mobile-width) {
     grid-template-columns: 100vw;
@@ -88,11 +89,15 @@ body {
     }
 
     #description {
-      font-size: 1.2rem;
-      padding: 2rem 8rem 0 6rem;
+      font-size: 1.1rem;
+      padding: 2rem 8rem 6rem 6rem;
 
       @media(max-width: 650px) {
-        padding: 2rem 4rem 0 2rem;
+        padding: 2rem 4rem 2rem 2rem;
+      }
+
+      p {
+        line-height: 1.4rem;
       }
 
       h1 {
