--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@ body {
   display: grid;
   grid-template-columns: 35vw 65vw;
   font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+  color: #4d4d4d;
 }
 @media (max-width: 560px) {
   body {
@@ -81,13 +82,16 @@ body main #socialBar a:first-of-type, body main #socialBar a:last-of-type {
   border-color: #005c8d;
 }
 body main #description {
-  font-size: 1.2rem;
-  padding: 2rem 8rem 0 6rem;
+  font-size: 1.1rem;
+  padding: 2rem 8rem 6rem 6rem;
 }
 @media (max-width: 650px) {
   body main #description {
-    padding: 2rem 4rem 0 2rem;
+    padding: 2rem 4rem 2rem 2rem;
   }
+}
+body main #description p {
+  line-height: 1.4rem;
 }
 body main #description h1 {
   font-weight: 100;
