--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -43,6 +43,7 @@ body {
     background-image: url("../images/background-copy.png");
     position: relative;
     min-height: 100vh;
+    overflow: hidden;
 
     @media(max-width: $mobile-width) {
       grid-column-start: 1;
