--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -23,6 +23,7 @@ body {
       grid-row-end: 2;
 
       background-position: 50% 35%;
+      background-size: 100%;
       height: 25vh;
       width: 100vw;
     }
@@ -168,7 +169,6 @@ body {
           margin: 0;
           vertical-align: super;
           width: 20px;
-          height: 100px;
         }
 
         img {
